# japari-librarian

./: .gitignore  Cargo.toml  README.md
src/: friend.rs  main.rs  process.rs  secrets.rs
src/page/: image_url.rs  mod.rs  partial_page.rs
src/reddit/: message.rs  mod.rs  reply.rs  session.rs
