[package]
name = "japari-librarian"
version = "1.3.0"
authors = ["Matthew Maclean <myself123@live.com>"]

[dependencies]
uuid = { version = "0.5", features = ["v4"] }
hyper = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3"
simplelog = "0.4"
clap = "2.29"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "json"]
